[package]
name = "yew-image-converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3"
yew = {version = "0.20.0", features = ["csr"]}
image = "0.24.5"
gloo = "0.8"
base64 = "0.13.0"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = ["File", "DragEvent", "DataTransfer"]